2005-09-25  Roland Dreier  <roland@cisco.com>

	* examples/rc_pingpong.c, examples/srq_pingpong.c,
	examples/uc_pingpong.c, examples/ud_pingpong.c: Update to match
	new completion channel and CQ creation API.

	* include/infiniband/driver.h, include/infiniband/verbs.h,
	src/device.c, src/ibverbs.h, src/verbs.c, src/cmd.c: Add notion of
	"completion channel" that allows consumers to dynamically create
	and destroy file descriptors for retrieving completion events.
	Completion channels are handled natively with kernel ABI version 3
	and simulated with backwards compatibility implementations for ABI
	versions 1 and 2.

	* include/infiniband/kern-abi.h: Update to match kernel ABI
	version 3.

2005-09-07  Roland Dreier  <roland@cisco.com>

	* src/device.c (ibv_get_device_guid): Use htonll() instead of
	relying on pointer aliasing (which seems to break for some gcc
	versions).

	* include/infiniband/arch.h: Add htonll() and ntohll() functions.

2005-09-06  Roland Dreier  <roland@cisco.com>

	* include/infiniband/kern-abi.h, include/infiniband/verbs.h,
	src/cmd.c, src/device.c, src/verbs.c, examples/asyncwatch.c:
	Update to handle new kernel ABI for avoiding stale completion
	events.  This is completely analogous to the previous asynchronous
	event change.

2005-08-31  Roland Dreier  <roland@cisco.com>

	* include/infiniband/kern-abi.h, include/infiniband/verbs.h,
	src/cmd.c, src/device.c, src/ibverbs.h, src/init.c, src/verbs.c,
	examples/asyncwatch.c: Update to handle new kernel ABI for
	avoiding stale asynchronous events.  When a CQ, QP or SRQ is
	destroyed, the kernel reports the number of events it has given to
	userspace, and we wait until we've handled the same number of
	events.

	This does introduce a library API change: consumers are now
	required to call ibv_put_async_event() to release every
	asynchronous event that they retrieve via ibv_get_async_event().

2005-08-30  Roland Dreier  <roland@cisco.com>
